--- a/quantum-composer/html/menu.partial.html
+++ b/quantum-composer/html/menu.partial.html
@@ -1,4 +1,4 @@
-<div id="menu-div" style="display:block;">
+<div id="menu-div" style="display:none;">
     <div id="menu-overlay" style="position:fixed; left: 0; top: 0; height: 100vh; width: 100vw; background: rgba(0, 0, 0, 0.8);">
     </div>
     <div style="position:absolute; top:20px; left:50px; margin:0;">
