--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Quantum Composer</title>
   <link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
@@ -57,6 +58,9 @@
       <div class="code-area">
         <button id="code-area-close-btn">X</button>
       </div>
+      <div class="barChart">
+        <div id="stateBarChart"></div>
+      </div>
     </div>
   </div>
 
@@ -76,6 +80,67 @@
   <div id="noscript-div" class="noscript-warning">
     You appear to have JavaScript blocked. And Quirk is made out of JavaScript... :(
   </div>
+  <script src='https://d3js.org/d3.v4.min.js'></script>
+  <script>
+    document.D3_FUNCTION = {
+      test: (barData) => {
+        let margin = {top: 30, right: 30, bottom: 70, left: 60},
+                width = 460 - margin.left - margin.right,
+                height = 400 - margin.top - margin.bottom;
+        let svg = d3.select("#stateBarChart")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .append("g")
+                .attr("transform",
+                        "translate(" + margin.left + "," + margin.top + ")");
+        let x = d3.scaleBand()
+                .range([0,width])
+                .domain(barData.map(function (d){return d.State;}))
+                .padding(0.2);
+        svg.append("g")
+                .attr("transform","translate(0," + height + ")")
+                .call(d3.axisBottom(x))
+                .selectAll("text")
+                .attr("transform", "translate(-10,0)rotate(-45)")
+                .style("text-anchor","end");
+        svg.append("text")
+                .attr("class","x label")
+                .attr("text-anchor","end")
+                .attr("dy", "2.5rem")
+                .attr("x", width)
+                .attr("y", height)
+                .text("Computational basis states")
+        let y = d3.scaleLinear()
+                .domain([0,100])
+                .range([height, 0])
+        svg.append("g")
+                .call(d3.axisLeft(y));
+        svg.append("text")
+                .attr("class","y label")
+                .attr("text-anchor","end")
+                .attr("y", 6)
+                .attr("dy","-2.5rem")
+                .attr("transform","rotate(-90)")
+                .text("Probability(%)")
+        svg.selectAll("mybar")
+                .data(barData)
+                .enter()
+                .append("rect")
+                .attr("x", function (d) {return x(d.State);})
+                .attr("y", function (d) {return y(d.Probability);})
+                .attr("width", x.bandwidth())
+                .attr("height", function (d) {return height - y(d.Probability)})
+                .attr("fill", "#69b3a2")
+        svg.selectAll("rect")
+                .transition()
+                .duration(800)
+                .attr("y", function(d) { return y(d.Probability); })
+                .attr("height", function(d) { return height - y(d.Probability); })
+                .delay(function(d,i){ return(i*100)})
+      }
+    }
+  </script>
   <script>
     document.getElementById('noscript-div').style.display = 'none';
     function grabGate(gate) {
