Revert "fix bar chart placement"
This reverts commit f78a5c9aa266ff17a83f4a3ea62ced2b7eb42c32.

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -70,11 +70,13 @@
         </div>
         <div class="circuit-area-chart">
           <button id="circuit-area-chart-close-btn">X</button>
-          <div id="stateBarChart"></div>
         </div>
       </div>
       <div class="code-area">
         <button id="code-area-close-btn">X</button>
+      </div>
+      <div class="barChart">
+        <div id="stateBarChart"></div>
       </div>
     </div>
   </div>
