handle click undo/redo/clear btn

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -61,9 +61,9 @@
       </div>
       <div class="circuit-area">
         <div class="circuit-area-header">
-          <button class="circuit-area-header-btn">Undo</button>
-          <button class="circuit-area-header-btn">Redo</button>
-          <button class="circuit-area-header-btn">Clear</button>
+          <button class="circuit-area-header-btn" id="undo-button">Undo</button>
+          <button class="circuit-area-header-btn" id="redo-button">Redo</button>
+          <button class="circuit-area-header-btn" id="clear-button">Clear</button>
         </div>        
         <div class="circuit-area-body" id="circuit-area-body">
           <canvas id="drawCanvas"></canvas>
