--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -95,10 +95,23 @@
   <div id="noscript-div" class="noscript-warning">
     You appear to have JavaScript blocked. And Quirk is made out of JavaScript... :(
   </div>
+  <style>
+    .tooltip {
+      background: #b0c4de;
+      border: 0;
+      border-radius: 8px;
+      height: 40px;
+      padding: 12px;
+      pointer-events: none;
+      position: absolute;
+      text-align: center;
+      width: 150px;
+    }
+  </style>
   <script src='https://d3js.org/d3.v4.min.js'></script>
   <script>
     document.D3_FUNCTION = {
-      test: (barData) => {
+      init: (barData) => {
         let margin = {top: 30, right: 30, bottom: 70, left: 60},
                 width = 460 - margin.left - margin.right,
                 height = 400 - margin.top - margin.bottom;
@@ -109,6 +122,48 @@
                 .append("g")
                 .attr("transform",
                         "translate(" + margin.left + "," + margin.top + ")");
+        let x = d3.scaleBand()
+                .range([0,width])
+                .domain(barData.map(function (d){return d.State;}))
+                .padding(0.2);
+        svg.append("g")
+                .attr("transform","translate(0," + height + ")")
+                .call(d3.axisBottom(x))
+                .selectAll("text")
+                .style("text-anchor","end");
+        svg.append("text")
+                .attr("class","x label")
+                .attr("text-anchor","end")
+                .attr("dy", "2.5rem")
+                .attr("x", width)
+                .attr("y", height)
+                .text("Computational basis states")
+        let y = d3.scaleLinear()
+                .domain([0,100])
+                .range([height, 0])
+        svg.append("g")
+                .call(d3.axisLeft(y));
+        svg.append("text")
+                .attr("class","y label")
+                .attr("text-anchor","end")
+                .attr("y", 6)
+                .attr("dy","-2.5rem")
+                .attr("transform","rotate(-90)")
+                .text("Probability(%)")
+      }
+      ,
+      test: (barData) => {
+        let margin = {top: 30, right: 30, bottom: 70, left: 60},
+                width = 1500,
+                height = 400;
+        let svg = d3.select("#stateBarChart");
+        svg.exit().remove();
+        svg = d3.select("#stateBarChart")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .append("g")
+                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
         let x = d3.scaleBand()
                 .range([0,width])
                 .domain(barData.map(function (d){return d.State;}))
@@ -138,6 +193,9 @@
                 .attr("dy","-2.5rem")
                 .attr("transform","rotate(-90)")
                 .text("Probability(%)")
+        const tooltip = d3.select("#stateBarChart").append("div")
+                .attr("class","tooltip")
+                .style("opacity", 0)
         svg.selectAll("mybar")
                 .data(barData)
                 .enter()
@@ -146,7 +204,14 @@
                 .attr("y", function (d) {return y(d.Probability);})
                 .attr("width", x.bandwidth())
                 .attr("height", function (d) {return height - y(d.Probability)})
-                .attr("fill", "#69b3a2")
+                .attr("fill", "#5BB0F8")
+                .on("mouseover",(d)=>{
+                  tooltip.transition().duration(200).style("opacity",.9);
+                  tooltip.html(`State: <span>${d.State}</span><br>Probability: <span>${d.Probability}% </span>`)
+                          .style('left', `${d3.event.layerX}px`)
+                          .style('top', `${(d3.event.layerY - 28)}px`);
+                })
+                .on("mouseout",()=>tooltip.transition().duration(500).style("opacity",0))
         svg.selectAll("rect")
                 .transition()
                 .duration(800)
