fixed size for chart container

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -68,7 +68,7 @@
         <div class="circuit-area-body" id="circuit-area-body">
           <canvas id="drawCanvas"></canvas>
         </div>
-        <div class="circuit-area-chart">
+        <div class="circuit-area-chart" id="circuit-chart">
           <button id="circuit-area-chart-close-btn">X</button>
           <div id="stateBarChart"></div>
         </div>
