search event update

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -27,7 +27,7 @@
     <div class="content">
       <div class="gate-area">
         <div class="gate-area-header">
-          <input type="text" class="gate-area-header-search" id="gate-area-header-search" onchange="handleSearch()">
+          <input type="search" class="gate-area-header-search" id="gate-area-header-search" oninput="handleSearch()">
           <button class="gate-area-header-btn" id="gate-area-header-grid-btn" onclick="handleGroupOnClicked()">List</button>
           <button class="gate-area-header-btn" id="gate-area-header-list-btn" onclick="handleGroupOffClicked()">Grid</button>
           <button class="gate-area-header-btn" id="gate-area-header-close-btn">X</button>
