add gate menu popup

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -65,7 +65,8 @@
           <button class="circuit-area-header-btn" id="clear-button">Clear</button>
         </div>        
         <div class="circuit-area-body" id="circuit-area-body">
-          <canvas id="drawCanvas"></canvas>
+          <canvas id="drawCanvas">            
+          </canvas>
         </div>
         <div class="circuit-area-chart" id="circuit-chart">
           <button id="circuit-area-chart-close-btn">X</button>
@@ -75,6 +76,13 @@
       <div class="code-area">
         <button id="code-area-close-btn">X</button>
       </div>
+    </div>
+    <div id="gate-menu-popup" style="z-index: 888;">
+      <button class="gate-menu-popup-btn">Info</button>
+      <button class="gate-menu-popup-btn">Cut</button>
+      <button class="gate-menu-popup-btn">Copy</button>
+      <button class="gate-menu-popup-btn">Paste</button>
+      <button class="gate-menu-popup-btn">Delete</button>
     </div>
   </div>
 
