--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -207,9 +207,7 @@
       const gridGates = document.querySelectorAll('.grid-view')
       if(search != null && search != '' && search != undefined) {
         listGates.forEach(item => {
-          const matchList = item.querySelector("span")
-          console.log("matchllist <<<<<<", matchList);
-          console.log("demoooo >>>>>", matchList.innerText);
+          const matchList = item.querySelector("span") //element contains gate name
           if(!matchList.innerText.trim().toLowerCase().includes(search)) {
             item.style.display = "none"
           } else {
