--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -71,6 +71,7 @@
           <button id="circuit-area-chart-close-btn">X</button>
           <button id="stateBarChartFilterZero">Hide zero states</button>
           <div id="stateBarChart"></div>
+          <div id="stateVectorChart"></div>
         </div>
       </div>
       <div class="code-area">
@@ -131,8 +132,9 @@
                 .attr("y", height)
                 .text("Computational basis states")
         let y = d3.scaleLinear()
-                .domain([0,100])
+                // .domain([0,100])
                 .range([height, 0])
+                .domain([0, d3.max(barData, function (d){ return Math.ceil(d.Probability)})])
         svg.append("g")
                 .call(d3.axisLeft(y));
         svg.append("text")
@@ -145,10 +147,14 @@
         const tooltip = d3.select("#stateBarChart").append("div")
                 .attr("class","barTooltip")
                 .style("opacity", 0)
-        svg.selectAll("mybar")
+        let g = svg.selectAll("mybar")
                 .data(barData)
                 .enter()
-                .append("rect")
+        // svg.selectAll("mybar")
+        //         .data(barData)
+        //         .enter()
+        g.append("rect")
+                .attr("class","bar1")
                 .attr("x", function (d) {return x(d.State);})
                 .attr("y", function (d) {return y(d.Probability);})
                 .attr("width", x.bandwidth())
@@ -161,12 +167,20 @@
                           .style('top', `${d3.event.layerY}px`);
                 })
                 .on("mouseout",()=>tooltip.transition().duration(500).style("opacity",0))
-        svg.selectAll("rect")
-                .transition()
-                .duration(800)
-                .attr("y", function(d) { return y(d.Probability); })
-                .attr("height", function(d) { return height - y(d.Probability); })
-                .delay(function(d,i){ return(i*100)})
+        g.append("rect")
+                .attr("class","bar2")
+                .attr("x", function (d) {return x(d.State)})
+                .attr("y", function (d) {return d.Probability > 50 ? 0 : d.Probability})
+                .attr("width", x.bandwidth())
+                .attr("height",  height)
+                .style("opacity", 0)
+                .on("mouseover",(d)=>{
+                  tooltip.transition().duration(200).style("opacity",.9);
+                  tooltip.html(`State: <span>${d.State}</span><br>Probability: <span>${d.Probability}% </span>`)
+                          .style('left', `${d3.event.layerX}px`)
+                          .style('top', `${d3.event.layerY}px`);
+                })
+                .on("mouseout",()=>tooltip.transition().duration(500).style("opacity",0))
       }
     }
   </script>
