--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -79,11 +79,11 @@
       </div>
     </div>
     <div id="gate-menu-popup" style="z-index: 888;">
-      <button class="gate-menu-popup-btn">Info</button>
-      <button class="gate-menu-popup-btn">Cut</button>
-      <button class="gate-menu-popup-btn">Copy</button>
-      <button class="gate-menu-popup-btn">Paste</button>
-      <button class="gate-menu-popup-btn">Delete</button>
+      <button class="gate-menu-popup-btn" id="gate-menu-popup-info-btn">Info</button>
+      <button class="gate-menu-popup-btn" id="gate-menu-popup-cut-btn">Cut</button>
+      <button class="gate-menu-popup-btn" id="gate-menu-popup-copy-btn">Copy</button>
+      <button class="gate-menu-popup-btn" id="gate-menu-popup-paste-btn">Paste</button>
+      <button class="gate-menu-popup-btn" id="gate-menu-popup-delete-btn">Delete</button>
     </div>
   </div>
 
