update load/save circuit data

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -17,11 +17,11 @@
         <div class="tab-child">Simulate</div>
       </div>
       <div class="quick-menu">
-        <button class="quick-menu-btn">Save</button>
-        <button class="quick-menu-btn">Import</button>
-        <button class="quick-menu-btn">Export</button>
-        <button class="quick-menu-btn">Share</button>
-        <button class="quick-menu-btn">Help</button>
+        <button class="quick-menu-btn" id="save-menu-btn">Save</button>
+        <button class="quick-menu-btn" id="import-menu-btn">Import</button>
+        <button class="quick-menu-btn" id="export-menu-btn">Export</button>
+        <button class="quick-menu-btn" id="share-menu-btn">Share</button>
+        <button class="quick-menu-btn" id="help-menu-btn">Help</button>
       </div>
     </div>
     <div class="content">
