--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -96,11 +96,20 @@
       <button id="paste-menu-popup-btn">Paste</button>
     </div>
     <div class="simulate-area hidden" id="simulate">
-      <h3>Simulation Amplitudes</h3>
       <div class="simWrapper">
+        <h3 class="simTitle">
+          <span class="simTitleLeft">
+            Simulation Amplitudes
+          </span>
+          <span class="simTitleRight">
+            Simulation Output
+          </span>
+        </h3>
         <canvas id="drawCanvasSim">
         </canvas>
-<!--        <div id="simulateOutput"></div>-->
+        <div id="simulateOutput">
+          <ul id="dataOutput"></ul>
+        </div>
       </div>
     </div>
   </div>
@@ -206,15 +215,25 @@
                           .style('top', `${d3.event.layerY}px`);
                 })
                 .on("mouseout",()=>tooltip.transition().duration(500).style("opacity",0))
+        const dataWrap = document.getElementById("simulateOutput");
         // let dataOutput = document.createElement("ul");
-        // barData.forEach(item => {
-        //   if (item.Probability !== 'NaN' && item.Probability !== '0.0000') {
-        //     let output = document.createElement("li");
-        //     output.innerHTML = item.State + ": " + item.Probability + "% <br/>";
-        //     dataOutput.appendChild(output);
-        //   }
-        // })
-        // document.getElementById("simulateOutput").appendChild(dataOutput);
+        let dataOutput = document.getElementById("dataOutput");
+        dataOutput.innerHTML = "";
+        dataOutput.style.height = "800px";
+        dataOutput.style.overflow = "auto";
+        barData.forEach(item => {
+          if (item.Probability !== 'NaN' && item.Probability !== '0.0000') {
+            let output = document.createElement("li");
+            output.innerHTML = item.State + ": " + item.Probability + "% <br/>";
+            dataOutput.appendChild(output);
+          }
+        })
+        if (dataOutput.getElementsByTagName("li").length > 15) {
+          dataOutput.style.columnCount = "2"
+        } else {
+          dataOutput.style.columnCount = "1";
+        }
+        dataWrap.appendChild(dataOutput);
       }
     }
   </script>
