--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -10,6 +10,8 @@
   <div class="app" id="app">
     <canvas id="dragCanvas" style="z-index: 888;">
     </canvas>
+    <canvas id="gateInfo" style="z-index: 888;">
+    </canvas>
     <div class="header">
       <div class="circuit-name">Project name</div>
       <div class="tab">
