--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -272,7 +272,7 @@
       let search = document.getElementById("gate-area-header-search").value.toLowerCase();
 
       const listGates = document.querySelectorAll('.list-view')
-      const gridGates = document.querySelectorAll('.grid-view')
+      const groupGates = document.querySelectorAll('.gate-group')
       if(search != null && search != '' && search != undefined) {
         listGates.forEach(item => {
           const matchList = item.querySelector("span") //element contains gate name
@@ -283,22 +283,42 @@
           }
         })
 
-        gridGates.forEach(item => {
-          const gridMatchList = item.querySelector("div span")
-          if(!gridMatchList.innerText.trim().toLowerCase().includes(search)) {
+        groupGates.forEach(item => {
+          let found = false
+          const gridGates = item.querySelectorAll('.grid-view')
+          gridGates.forEach(item => {
+            const gridMatchList = item.querySelector("div span")
+            if(!gridMatchList.innerText.trim().toLowerCase().includes(search)) {
             item.style.display = "none"
-          } else {
+            } else {
             item.style.display = "block"
+            found = true
+            }
+          })  
+          if(found == false) {
+            if(!item.classList.contains("group-gate-name-not-found")) {
+              item.classList.add("group-gate-name-not-found")
+            }
+          } else {
+            if(item.classList.contains("group-gate-name-not-found")) {
+              item.classList.remove("group-gate-name-not-found")
+            }
           }
-        })        
+        })
       }
       else {
         listGates.forEach(item => {
           item.style.display = "block"
         })
-        gridGates.forEach(item => {
-          item.style.display = "block"
-        }) 
+        groupGates.forEach(item => {
+          if(item.classList.contains("group-gate-name-not-found")) {
+              item.classList.remove("group-gate-name-not-found")
+          }
+          const gridGates = item.querySelectorAll('.grid-view')
+          gridGates.forEach(item => {
+            item.style.display = "block"
+          })  
+        })
       }
     }
 
