--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -30,10 +30,10 @@
       <div class="gate-area">
         <div class="gate-area-header">
           <input type="search" class="gate-area-header-search" id="gate-area-header-search" placeholder="Search" oninput="handleSearch()">
-          <button class="gate-area-header-btn" id="gate-area-header-grid-btn" onclick="handleGroupOnClicked()">
+          <button class="gate-area-header-btn" id="gate-area-header-grid-btn" data-state="active" onclick="handleGroupOnClicked()">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M12 4H6A2 2 0 004 6v6a2 2 0 002 2h6a2 2 0 002-2V6A2 2 0 0012 4zm0 8H6V6h6zM26 4H20a2 2 0 00-2 2v6a2 2 0 002 2h6a2 2 0 002-2V6A2 2 0 0026 4zm0 8H20V6h6zM12 18H6a2 2 0 00-2 2v6a2 2 0 002 2h6a2 2 0 002-2V20A2 2 0 0012 18zm0 8H6V20h6zM26 18H20a2 2 0 00-2 2v6a2 2 0 002 2h6a2 2 0 002-2V20A2 2 0 0026 18zm0 8H20V20h6z"></path></svg>
           </button>
-          <button class="gate-area-header-btn" id="gate-area-header-list-btn" onclick="handleGroupOffClicked()">
+          <button class="gate-area-header-btn" id="gate-area-header-list-btn" data-state="inactive" onclick="handleGroupOffClicked()">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M16 8H30V10H16zM16 22H30V24H16zM10 14H4a2.0023 2.0023 0 01-2-2V6A2.0023 2.0023 0 014 4h6a2.0023 2.0023 0 012 2v6A2.0023 2.0023 0 0110 14zM4 6v6h6.0012L10 6zM10 28H4a2.0023 2.0023 0 01-2-2V20a2.0023 2.0023 0 012-2h6a2.0023 2.0023 0 012 2v6A2.0023 2.0023 0 0110 28zM4 20v6h6.0012L10 20z"></path></svg>
           </button>
           <button class="gate-area-header-btn" id="gate-area-header-close-btn" data-gate="show" onclick="toggleLeftSideBar()">
@@ -251,6 +251,11 @@
       gateGrid.forEach(item => {
         item.style.display = 'none'
       })
+      //style click button
+      const button1 = document.getElementById("gate-area-header-grid-btn")
+      button1.setAttribute("data-state", "active")
+      const button2 = document.getElementById("gate-area-header-list-btn")
+      button2.setAttribute("data-state", "inactive")
     }
   
     function handleGroupOffClicked() {
@@ -262,6 +267,11 @@
       gateGrid.forEach(item => {
         item.style.display = 'block'
       })
+      //style click button
+      const button1 = document.getElementById("gate-area-header-grid-btn")
+      button1.setAttribute("data-state", "inactive")
+      const button2 = document.getElementById("gate-area-header-list-btn")
+      button2.setAttribute("data-state", "active")
     }
     
     function grabGate(gate) {
