--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -68,8 +68,12 @@
       </div>
       <div class="circuit-area">
         <div class="circuit-area-header">
-          <button class="circuit-area-header-btn" id="undo-button">Undo</button>
-          <button class="circuit-area-header-btn" id="redo-button">Redo</button>
+          <button class="circuit-area-header-btn" id="undo-button">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><path d="M15,9.3c1.5,0,2.8,1.3,2.8,2.7c0,1.5-1.3,2.7-2.8,2.7h-4V16h4c2.3,0,4-1.7,4-4c0-2.2-1.8-4-4-4H3.4	l2.5-2.5L5,4.6l-4,4l4,4l0.9-0.9L3.4,9.3H15z"></path></svg>
+          </button>
+          <button class="circuit-area-header-btn" id="redo-button" style="transform: scaleX(-1);">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><path d="M15,9.3c1.5,0,2.8,1.3,2.8,2.7c0,1.5-1.3,2.7-2.8,2.7h-4V16h4c2.3,0,4-1.7,4-4c0-2.2-1.8-4-4-4H3.4	l2.5-2.5L5,4.6l-4,4l4,4l0.9-0.9L3.4,9.3H15z"></path></svg>
+          </button>
           <button class="circuit-area-header-btn" id="clear-button">Clear</button>
         </div>        
         <div class="circuit-area-body" id="circuit-area-body">
